[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel", "numpy>=1.18.5", "ninja", "cmake"]  # PEP 508 specifications.

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[[tool.cibuildwheel.overrides]]
select = "*-manylinux*x86_64*"
before-all = "./install_deps.sh many64"

[[tool.cibuildwheel.overrides]]
select = "*-manylinux*i686*"
before-all = "./install_deps.sh many86"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = "./install_deps.sh musl"