[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel", "numpy>=1.18.5", "ninja", "cmake"]  # PEP 508 specifications.

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[[tool.cibuildwheel.overrides]]
select = "*-manylinux*x86_64*"
before-all = "./tools/install_deps.sh many64"
test-command = "{project}/tools/test_cibuildwheel.sh"

[[tool.cibuildwheel.overrides]]
select = "*-manylinux*i686*"
before-all = "./tools/install_deps.sh many86"
test-command = "{project}/tools/test_cibuildwheel.sh"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = "./tools/install_deps.sh musl"
test-command = "{project}/tools/test_cibuildwheel.sh"

[[tool.cibuildwheel.overrides]]
select = "*win*"
before-build = "tools\\install_deps.bat install"
test-command = "{project}\\tools\\test_cibuildwheel.bat {project}"
